--- a/app/styles/randomSnaps.css
+++ b/app/styles/randomSnaps.css
@@ -241,7 +241,7 @@
 
 .image-container.phone {
   width: min(360px, 90%);
-  height: min(80vh, 700px);
+  height: min(85vh, 700px);
   margin: 2rem auto;
   border-radius: 32px;
   padding: 12px;
@@ -252,24 +252,40 @@
   );
 }
 
-.image-container.phone::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100px;
-  height: 24px;
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 0 0 12px 12px;
-  backdrop-filter: blur(10px);
-}
+
 
 .image-container.phone .image-wrapper {
   border-radius: 20px;
   overflow: hidden;
   height: 100%;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+/* iPhone Notch */
+.notch {
+  position: absolute;
+  top: min(12px, 3%);
+  left: 50%;
+  transform: translateX(-50%);
+  width: min(120px, 35%);
+  height: min(32px, 4%);
+  background: #000000;
+  border-radius: 50px;
+  z-index: 100;
+}
+
+.notch::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: min(90px, 75%);
+  height: min(28px, 85%);
+  background: #000000;
+  border-radius: 50px;
+  z-index: 101;
 }
 
 .image-wrapper {
@@ -2171,4 +2187,138 @@
 
 .dropdown-menu::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+@media screen and (max-width: 480px) {
+  .image-container.phone {
+    height: 75vh;
+    min-height: 600px;
+    margin: 1rem auto;
+  }
+  
+  .image-container.phone .notch {
+    width: 110px;
+    height: 27px;
+    top: 10px;
+    border-radius: 40px;
+  }
+  
+  .image-container.phone .notch::after {
+    width: 85px;
+    height: 23px;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .image-container.phone {
+    height: 80vh;
+    min-height: 580px;
+  }
+  
+  .image-container.phone .notch {
+    width: 95px;
+    height: 25px;
+    top: 8px;
+    border-radius: 35px;
+  }
+  
+  .image-container.phone .notch::after {
+    width: 75px;
+    height: 21px;
+    border-radius: 35px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .image-container.phone {
+    height: 85vh;
+    min-height: 560px;
+    width: 85%;
+  }
+  
+  .image-container.phone .notch {
+    width: 85px;
+    height: 23px;
+    top: 6px;
+    border-radius: 30px;
+  }
+  
+  .image-container.phone .notch::after {
+    width: 65px;
+    height: 19px;
+    border-radius: 30px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .image-container.phone {
+    height: 90vh;
+    min-height: 540px;
+    width: 80%;
+  }
+  
+  .image-container.phone .notch {
+    width: 80px;
+    height: 21px;
+    top: 5px;
+    border-radius: 25px;
+  }
+  
+  .image-container.phone .notch::after {
+    width: 60px;
+    height: 17px;
+    border-radius: 25px;
+  }
+}
+
+.image-container.phone .image-actions {
+  flex-direction: column;
+  gap: 0.5rem;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 99;
+}
+
+.image-container.phone .random-snap-action-btn {
+  padding: 0.6rem;
+  border-radius: 10px;
+  width: 42px;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-container.phone .random-snap-action-btn span {
+  display: none;
+}
+
+.image-container.phone .random-snap-action-btn svg {
+  width: 20px;
+  height: 20px;
+}
+
+@media screen and (max-width: 480px) {
+  .image-container.phone .random-snap-action-btn {
+    width: 38px;
+    height: 38px;
+  }
+  
+  .image-container.phone .random-snap-action-btn svg {
+    width: 18px;
+    height: 18px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .image-container.phone .random-snap-action-btn {
+    width: 34px;
+    height: 34px;
+  }
+  
+  .image-container.phone .random-snap-action-btn svg {
+    width: 16px;
+    height: 16px;
+  }
 }
