--- a/app/styles/explore.css
+++ b/app/styles/explore.css
@@ -1,7 +1,7 @@
 .explore-title {
     font-size: 2rem;
     font-weight: 700;
-    color: #333;
+    color: var(--theme-color);
     margin-bottom: 1.5rem;
     text-align: center;
 }
@@ -23,11 +23,11 @@
 }
 
 .search-tag {
-    background-color: #f0f0f0;
+    background-color: #2f2f2f;
     padding: 0.5rem 1rem;
     border-radius: 20px;
     font-size: 0.9rem;
-    color: #333;
+    color: rgba(255, 255, 255, 0.813);
     display: inline-flex;
     align-items: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -56,14 +56,14 @@
     font-size: 1.1rem;
     padding: 2rem;
     grid-column: 1 / -1;
-    background: #f5f5f5;
+    background: #2f2f2f;
     border-radius: 8px;
     margin: 20px 0;
 }
 
 .clear-button {
-    background-color: #ff4444;
-    color: white;
+    background-color: #9f0c0c;
+    color: rgba(255, 255, 255, 0.881);
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 20px;
@@ -71,6 +71,9 @@
     cursor: pointer;
     transition: background-color 0.2s;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.search-tag-inner {
+    color: var(--theme-color)
 }
 
 .clear-button:hover {
