--- a/app/styles/searchbar.css
+++ b/app/styles/searchbar.css
@@ -1,6 +1,6 @@
 .search-container {
-    width: 100%;
-    max-width: 600px;
+    width: 85%;
+    /* max-width: 600px; */
     margin: 0 auto;
     position: relative;
 }
@@ -12,38 +12,52 @@
 
 .search-input {
     width: 100%;
-    padding: 12px 45px;
-    border: 1px solid #ddd;
+    padding: 0;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 50px;
+    border: 1px solid #4e4e4e;
+    color: #4e4e4e;
     border-radius: 25px;
-    font-size: 16px;
+    font-size: 22px;
     outline: none;
+    background-color: transparent;
     transition: border-color 0.2s, box-shadow 0.2s;
+}
+.search-input::placeholder {
+    font-weight: bold;
+  opacity: 0.5;
+  color: #4e4e4e;
 }
 
 .search-input:focus {
-    border-color: #007bff;
-    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.1);
+    border-color: #ffb3007d;
+    box-shadow: 0 0 0 3px rgba(255, 191, 0, 0.1);
 }
 
 .search-icon {
     position: absolute;
     left: 15px;
-    top: 50%;
+    top: 51%;
     transform: translateY(-50%);
     color: #666;
     pointer-events: none;
 }
+.search-icon svg {
+    width: 30px;
+    height: 30px;
+}
 
 .search-slash {
     position: absolute;
-    right: 15px;
+    right: -29px;
     top: 50%;
     transform: translateY(-50%);
-    color: #666;
-    font-size: 14px;
-    padding: 5px;
-    background-color: #f0f0f0;
-    border-radius: 4px;
+    color: #666666bc;
+    font-size: 22px;
+    padding: 5px 7px;
+    background-color: #2f2f2f92;
+    border-radius: 6px;
     pointer-events: none;
 }
 
@@ -53,13 +67,14 @@
     left: 0;
     right: 0;
     margin-top: 5px;
-    background: white;
+    background: #2f2f2f;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     max-height: 400px;
+    width: 100%;
     overflow-y: auto;
-    border: 1px solid #eee;
+    border: 1px solid #4e4e4e;
 }
 
 .suggestion-category {
@@ -67,13 +82,13 @@
 }
 
 .suggestion-category:not(:last-child) {
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #4e4e4e;
 }
 
 .suggestion-category-title {
     padding: 5px 15px;
     font-size: 0.9em;
-    color: #666;
+    color: #ffb300d4;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 0.5px;
@@ -86,7 +101,7 @@
 }
 
 .suggestion-item:hover {
-    background-color: #f5f5f5;
+    background-color: #464646;
 }
 
 @media (max-width: 768px) {
@@ -109,12 +124,13 @@
 }
 
 .suggestions-container::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #2f2f2f;
     border-radius: 4px;
 }
 
 .suggestions-container::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #5f5f5f;
+    border: 2px solid #2f2f2f;
     border-radius: 4px;
 }
 
